--- a/www/public/static/CSS/index.css
+++ b/www/public/static/CSS/index.css
@@ -253,10 +253,9 @@ body {
 .main__home__filter__image {
   width: 100%;
   height: 100%;
-  background: white url("../../Images/background1.jpeg") no-repeat;
+  background: white url("/Images/background1.jpeg") no-repeat;
   background-size: cover;
-  background-position: center -100px;
-  transform: scale(1.3);
+  background-position: center;
 }
 .main__home__texto {
   z-index: 1;
