--- a/www/public/static/SCSS/Components/_index.scss
+++ b/www/public/static/SCSS/Components/_index.scss
@@ -30,10 +30,9 @@ body {
     &__image {
       width: 100%;
       height: 100%;
-      background: white url("../../Images/background1.jpeg") no-repeat;
+      background: white url("/Images/background1.jpeg") no-repeat;
       background-size: cover;
-      background-position: center -100px;
-      transform: scale(1.3);
+      background-position: center;
     }
   }
 
