--- a/www/public/static/CSS/index.css
+++ b/www/public/static/CSS/index.css
@@ -241,21 +241,41 @@ body {
 .main__home {
   width: 100vw;
   height: 100vh;
+  background-color: #ff7213;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
-.main__home__filter {
-  width: 50%;
-  height: 100%;
+.main__home__campanhas {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+  padding: 50px;
+  flex-direction: column;
+  position: absolute;
+  right: 150px;
+}
+.main__home__campanhas h2 {
+  color: black;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 3rem;
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+.main__home__campanhas__filter {
+  width: 700px;
+  height: 700px;
   background-color: black;
   opacity: 80%;
-  float: right;
   overflow: hidden;
 }
-.main__home__filter__image {
+.main__home__campanhas__filter__imagem {
   width: 100%;
   height: 100%;
   background: white url("/Images/background1.jpeg") no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-position: -240px bottom;
 }
 .main__home__texto {
   z-index: 1;
