--- a/www/public/static/SCSS/Components/_index.scss
+++ b/www/public/static/SCSS/Components/_index.scss
@@ -18,21 +18,43 @@ body {
 .main__home {
   width: 100vw;
   height: 100vh;
+  background-color: $primary-color;
+  display: flex;
+  align-items: center;
+  position: relative;
 
-  &__filter {
-    width: 50%;
-    height: 100%;
-    background-color: black;
-    opacity: 80%;
+  &__campanhas {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     float: right;
-    overflow: hidden;
+    padding: 50px;
+    flex-direction: column;
+    position: absolute;
+    right: 150px;
 
-    &__image {
-      width: 100%;
-      height: 100%;
-      background: white url("/Images/background1.jpeg") no-repeat;
-      background-size: cover;
-      background-position: center;
+    h2 {
+      color: black;
+      font-family: $main-header;
+      font-size: 3rem;
+      margin-top: 20px;
+      margin-bottom: 50px;
+    }
+
+    &__filter {
+      width: 700px;
+      height: 700px;
+      background-color: black;
+      opacity: 80%;
+      overflow: hidden;
+
+      &__imagem {
+        width: 100%;
+        height: 100%;
+        background: white url("/Images/background1.jpeg") no-repeat;
+        background-position: -240px bottom;
+      }
     }
   }
 
