Adicionado Página Sobre - Desktop

--- a/src/static/SCSS/Abstracts/_fonts.scss
+++ b/src/static/SCSS/Abstracts/_fonts.scss
@@ -17,3 +17,6 @@ $header-dropdown-font: "Inter", sans-serif;
 $main-header: "Nunito Sans", sans-serif;
 $main-font: "Aktiv Grotesk", sans-serif;
 $container-header: "Montserrat", sans-serif;
+
+// Sobre
+$sobre-header: "Barlow Condensed", sans-serif;
