--- a/src/static/CSS/sobre.css
+++ b/src/static/CSS/sobre.css
@@ -468,7 +468,155 @@ body {
     color: black;
   }
 }
-@media (min-width: 900px) {
+@media (min-width: 900px) and (max-width: 1139px) {
+  .main {
+    width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+  }
+
+  .main__banner {
+    width: 100%;
+    height: 300px;
+    background: #ff7213;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .main__banner__header {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 3.5rem;
+    color: white;
+  }
+
+  .content__parte-1 {
+    display: flex;
+    justify-content: center;
+  }
+  .content__parte-1 .imagem {
+    min-width: 500px;
+    height: 500px;
+    background: black url("/Imagens/imagem1.jpg") no-repeat center;
+    background-size: cover;
+  }
+  .content__parte-1__artigo {
+    margin: 80px 70px;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .content__parte-1__artigo__header {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    color: black;
+    min-width: 269px;
+  }
+  .content__parte-1__artigo__text {
+    font-family: "Aktiv Grotesk", sans-serif;
+    font-size: 1.12rem;
+    line-height: 2;
+    color: black;
+  }
+  .content__parte-2 {
+    background-color: black;
+    width: 100%;
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .content__parte-2__header {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 3rem;
+    color: white;
+    margin-bottom: 10px;
+  }
+  .content__parte-2__text {
+    font-family: "Aktiv Grotesk", sans-serif;
+    color: #ff7213;
+    font-size: 1.3rem;
+    line-height: 1.7;
+    max-width: 40%;
+    text-align: center;
+  }
+  .content .containers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .content .containers__container {
+    background-color: white;
+    width: 350px;
+    margin: 48px 15px;
+  }
+  .content .containers__container__header {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    margin: 20px 0;
+    color: black;
+  }
+  .content .containers__container__text {
+    font-family: "Aktiv Grotesk", sans-serif;
+    font-size: 1.3rem;
+    line-height: 1.7;
+    margin: 0 30px;
+    margin-bottom: 30px;
+    color: black;
+  }
+  .content .containers__container__local {
+    background-color: #ff7213;
+    font-family: "Aktiv Grotesk", sans-serif;
+    text-align: center;
+    font-size: 1.2rem;
+    color: white;
+    padding: 30px 0;
+  }
+  .content .containers__container img {
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+  }
+  .content__parte-3 {
+    background-color: #ff7213;
+    padding: 50px 20%;
+  }
+  .content__parte-3__header {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 3rem;
+    text-align: center;
+    margin: 20px 0;
+    color: white;
+  }
+  .content__parte-3__text {
+    font-family: "Aktiv Grotesk", sans-serif;
+    font-size: 1.3rem;
+    line-height: 1.7;
+    margin: 0 30px;
+    margin-bottom: 30px;
+    color: black;
+  }
+  .content__parte-3__numbers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px 0;
+  }
+  .content__parte-3__numbers .number {
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 4rem;
+    font-weight: bold;
+    color: black;
+  }
+  .content__parte-3__numbers .text {
+    font-family: "Aktiv Grotesk", sans-serif;
+    font-size: 1.3rem;
+    color: black;
+  }
+}
+@media (min-width: 1139px) {
   .main {
     width: 100vw;
     height: auto;
@@ -490,7 +638,8 @@ body {
 
   .content__parte-1 {
     display: flex;
-    margin: 0 20%;
+    margin: 0 auto;
+    justify-content: center;
   }
   .content__parte-1 .imagem {
     width: 500px;
