--- a/src/static/SCSS/sobre.scss
+++ b/src/static/SCSS/sobre.scss
@@ -178,8 +178,180 @@ body {
   }
 }
 
+// Versão Tablet
+@media (min-width: 900px) and (max-width: 1139px) {
+  .main {
+    width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+  }
+
+  .main__banner {
+    width: 100%;
+    height: 300px;
+    background: $primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__header {
+      font-family: $main-header;
+      font-size: 3.5rem;
+      color: white;
+    }
+  }
+
+  .content {
+    &__parte-1 {
+      display: flex;
+      justify-content: center;
+
+      .imagem {
+        min-width: 500px;
+        height: 500px;
+        background: black url("/Imagens/imagem1.jpg") no-repeat center;
+        background-size: cover;
+      }
+
+      &__artigo {
+        margin: 80px 70px;
+        max-width: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        &__header {
+          font-family: $main-header;
+          font-size: 2.5rem;
+          margin-bottom: 10px;
+          color: black;
+          min-width: 269px;
+        }
+
+        &__text {
+          font-family: $main-font;
+          font-size: 1.12rem;
+          line-height: 2;
+          color: black;
+        }
+      }
+    }
+
+    &__parte-2 {
+      background-color: black;
+      width: 100%;
+      padding: 100px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &__header {
+        font-family: $main-header;
+        font-size: 3rem;
+        color: white;
+        margin-bottom: 10px;
+      }
+
+      &__text {
+        font-family: $main-font;
+        color: $primary-color;
+        font-size: 1.3rem;
+        line-height: 1.7;
+        max-width: 40%;
+        text-align: center;
+      }
+    }
+
+    .containers {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      &__container {
+        background-color: white;
+        width: 350px;
+        margin: 48px 15px;
+
+        &__header {
+          font-family: $main-header;
+          font-size: 2rem;
+          text-align: center;
+          margin: 20px 0;
+          color: black;
+        }
+
+        &__text {
+          font-family: $main-font;
+          font-size: 1.3rem;
+          line-height: 1.7;
+          margin: 0 30px;
+          margin-bottom: 30px;
+          color: black;
+        }
+
+        &__local {
+          background-color: $primary-color;
+          font-family: $main-font;
+          text-align: center;
+          font-size: 1.2rem;
+          color: white;
+          padding: 30px 0;
+        }
+
+        img {
+          width: 100%;
+          height: 230px;
+          object-fit: cover;
+        }
+      }
+    }
+
+    &__parte-3 {
+      background-color: $primary-color;
+      padding: 50px 20%;
+
+      &__header {
+        font-family: $main-header;
+        font-size: 3rem;
+        text-align: center;
+        margin: 20px 0;
+        color: white;
+      }
+
+      &__text {
+        font-family: $main-font;
+        font-size: 1.3rem;
+        line-height: 1.7;
+        margin: 0 30px;
+        margin-bottom: 30px;
+        color: black;
+      }
+
+      &__numbers {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 30px 0;
+
+        .number {
+          font-family: $main-header;
+          font-size: 4rem;
+          font-weight: bold;
+          color: black;
+        }
+
+        .text {
+          font-family: $main-font;
+          font-size: 1.3rem;
+          color: black;
+        }
+      }
+    }
+  }
+}
+
 // Versão Desktop
-@media (min-width: 900px) {
+@media (min-width: 1139px) {
   .main {
     width: 100vw;
     height: auto;
@@ -203,7 +375,8 @@ body {
   .content {
     &__parte-1 {
       display: flex;
-      margin: 0 20%;
+      margin: 0 auto;
+      justify-content: center;
 
       .imagem {
         width: 500px;
