Página Eventos Anteriores

--- a/src/Components/menu-mobile.html
+++ b/src/Components/menu-mobile.html
@@ -37,30 +37,24 @@
 
       <div class="category--items category__items--2">
         <li class="menu__links__link">
-          <a href="/ajuricast">Ajuricast</a>
-        </li>
-        <li
-          class="menu__links__link menu__links__link--category subcategory--1"
-        >
-          <a>Ajuricaba TV</a>
-          <i class="fas fa-caret-down icon"></i>
+          <a href="/ajuricaba-tv">Academia Ajuricaba</a>
         </li>
 
-        <div class="sub--category sub--category--items--1">
-          <li class="menu__links__link">
-            <a href="/ajuricaba-tv">Academia Ajuricaba</a>
-          </li>
-          <li class="menu__links__link">
-            <a href="/paletras">Palestras</a>
-          </li>
-          <li class="menu__links__link">
-            <a href="/minuto-ajuricaba">Minuto Ajuricaba</a>
-          </li>
-          <li class="menu__links__link">
-            <a href="/entrevistas">Entrevistas</a>
-          </li>
-          <li class="menu__links__link"><a href="/actions">Ações</a></li>
-        </div>
+        <li class="menu__links__link">
+          <a href="/paletras">Palestras</a>
+        </li>
+
+        <li class="menu__links__link">
+          <a href="/minuto-ajuricaba">Minuto Ajuricaba</a>
+        </li>
+
+        <li class="menu__links__link">
+          <a href="/entrevistas">Entrevistas</a>
+        </li>
+
+        <li class="menu__links__link">
+          <a href="/actions">Ações</a>
+        </li>
       </div>
 
       <!-- Categoria Eventos -->
