--- a/src/pages/templates/about.html
+++ b/src/pages/templates/about.html
@@ -38,6 +38,7 @@
   </head>
   <body>
     {% include "header.html" %} {% include "menu-mobile.html" %}
+    <!-- Main -->
     <main class="main">
       <div class="main__banner">
         <h1 class="main__banner__header">Sobre nós</h1>
