--- a/src/pages/templates/diretoria.html
+++ b/src/pages/templates/diretoria.html
@@ -37,6 +37,7 @@
   </head>
   <body>
     {% include "header.html" %} {% include "menu-mobile.html" %}
+    <!-- Main -->
     <main class="main">
       <div class="content">
         <div class="content__header">
