--- a/src/static/SCSS/Abstracts/_colors.scss
+++ b/src/static/SCSS/Abstracts/_colors.scss
@@ -23,3 +23,6 @@ $sobre-banner-gradient: linear-gradient(
   rgb(255, 175, 1) 0%,
   rgba(255, 114, 19, 1) 70%
 );
+
+// Eventos Anteriores
+$eventos-bg-color: #f8f9fa;
