--- a/src/Components/header.html
+++ b/src/Components/header.html
@@ -60,32 +60,23 @@
         <div class="header__dropdown__content">
           <ul class="header__dropdown__links">
             <li class="header__dropdown__links__link">
-              <a href="/ajuricast">Ajuricast</a>
+              <a href="/ajuricaba-tv">Academia Ajuricaba</a>
             </li>
 
-            <li
-              class="header__dropdown__links__link header__dropdown__links__link--category"
-            >
-              <i class="fas fa-chevron-left icon"></i>
-              <a>Ajuricaba TV</a>
+            <li class="header__dropdown__links__link">
+              <a href="/palestras">Palestras</a>
+            </li>
 
-              <div class="header__dropdown__links__link__container">
-                <div class="dropdown__category">
-                  <ul class="links">
-                    <li class="link">
-                      <a href="/ajuricaba-tv">Academia Ajuricaba</a>
-                    </li>
-                    <li class="link"><a href="/palestras">Palestras</a></li>
-                    <li class="link">
-                      <a href="/minuto-ajuricaba">Minuto Ajuricaba</a>
-                    </li>
-                    <li class="link">
-                      <a href="/entrevistas">Entrevistas</a>
-                    </li>
-                    <li class="link"><a href="/actions">Ações</a></li>
-                  </ul>
-                </div>
-              </div>
+            <li class="header__dropdown__links__link">
+              <a href="/minuto-ajuricaba">Minuto Ajuricaba</a>
+            </li>
+
+            <li class="header__dropdown__links__link">
+              <a href="/entrevistas">Entrevistas</a>
+            </li>
+
+            <li class="header__dropdown__links__link">
+              <a href="/actions">Ações</a>
             </li>
           </ul>
         </div>
