--- a/src/static/SCSS/Abstracts/_fonts.scss
+++ b/src/static/SCSS/Abstracts/_fonts.scss
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');
 
 @font-face {
   font-family: "Aktiv Grotesk";
@@ -20,3 +21,7 @@ $container-header: "Montserrat", sans-serif;
 
 // Sobre
 $sobre-header: "Barlow Condensed", sans-serif;
+
+// Eventos Anteriores
+$eventos-title: "Raleway", sans-serif;
+$eventos-font: "Aktiv Grotesk", sans-serif;
